# rust-raytracer-example

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  hadean-config.toml  shell.nix
src/: camera.rs  main.rs  material.rs  object.rs  render.rs  scene.rs  server.rs  shared.rs
static/: app.jsx  index.html  mock.jsx  style.css
