[package]
name = "hadean-tracer"
version = "0.1.0"
authors = ["aidanhs@hadean.com", "Matthijs De Smedt <matthijsds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-files = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
actix-web-actors = "3.0"
serde_json = "1.0"

# https://github.com/emoon/rust_minifb/issues/256 - wayland doesn't update the window
minifb = { version = "0.19.3", features = ["x11"], default-features = false }
crossbeam = "0.6"
crossbeam-channel = "0.4"
glam = { version = "0.18", features = ["serde"] }
bvh = { version = "0.6", features = ["serde_impls"] }
rand = "0.8.3"
spiral = "0.1.9"
png = "0.16.8"
num_cpus = "1.13.0"
rand_pcg = "0.3.0"

futures = { version = "0.3", features = ["executor", "thread-pool"] }
serde = { version = "1", features = ["derive"] }
hadean = { optional = true, path = "/home/aidanhs/.hadean/sdk/crates/hadean" }

[features]
distributed = ["hadean"]
