[package]
name = "hadean-tracer"
version = "0.1.0"
authors = ["aidanhs@hadean.com", "Matthijs De Smedt <matthijsds@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-files = "0.5"
actix-rt = "1.1"
actix-web = "3.3"
actix-web-actors = "3.0"
serde_json = "1.0"

# https://github.com/emoon/rust_minifb/issues/256 - wayland doesn't update the window
bvh = { version = "0.6", features = ["serde_impls"] }
crossbeam = "0.7"
glam = { version = "0.18", features = ["serde"] }
image = { version = "0.23", default-features = false, features = ["gif", "png"] }
minifb = { optional = true, version = "0.19.3", features = ["x11"], default-features = false }
num_cpus = "1.13.0"
rand = "0.8.3"
rand_pcg = "0.3.0"
spiral = "0.1.9"

futures = { version = "0.3", features = ["executor", "thread-pool"] }
serde = { version = "1", features = ["derive"] }
hadean = { optional = true, path = "hadean-sdk-symlink" }

bincode = "1.3"

[features]
distributed = ["hadean"]
gui = ["minifb"]
